gnome-shell/search-entry: Fix invisible hint text in light themes

--- a/gnome-shell/src/gnome-shell-sass/widgets/_search-entry.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_search-entry.scss
@@ -9,6 +9,13 @@
 
   @extend %system_entry;
 
+  // Yaru: Use light text for the search hint
+  @if ($variant =='light') {
+    StLabel.hint-text {
+      color: transparentize($system_fg_color, 0.2);
+    }
+  }
+
   .search-entry-icon {
     icon-size: $scalable_icon_size;
     margin-top: 2px; // center vertically
